[animation-worklet] Do not tick worklet animations on main thread

We should not tick cc:WorkletAnimation on main thread. The local
time is actually not updated on main thread so the produced value
is incorrect and more importantly causes superfluous commits.


Note: We may decide to avoid ticking all animations on main thread
(See http://crbug.com/762717) in which case we can remove this.


TEST: cc/animation/worklet_animation_unittest.cc
Bug: 839555

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I3335bfd452cc284a585e84a87b8912207b843813
Reviewed-on: https://chromium-review.googlesource.com/1042875
Commit-Queue: Majid Valipour <majidvp@chromium.org>
Reviewed-by: Robert Flack <flackr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556256}
Former-commit-id: 3698e89bf23d74b96c09610d6425a601f567f714